# data-setup

./: .bash_profile  .gitignore  GCP_alternative_students.md  GCP_alternative_teachers.md  Gemfile  LINUX.es.md  LINUX.md  LINUX_gcp.es.md  LINUX_gcp.md  LINUX_keep_current.es.md  LINUX_keep_current.md  Preferences.sublime-settings  README.es.md  README.md  REMOTE_SETUP.md  VM.es.md  VM.md  WINDOWS.es.md  WINDOWS.md  WINDOWS_gcp.es.md  WINDOWS_gcp.md  WINDOWS_keep_current.es.md  WINDOWS_keep_current.md  WINDOWS_target.md  _sublime_text.md  build.rb  build.sh  build_confs.rb  builds.rb  config.rb  confs.rb  git-prompt.sh  macOS.es.md  macOS.md  macOS_M1.md  macOS_gcp.es.md  macOS_gcp.md  macOS_keep_current.es.md  macOS_keep_current.md  pyproject.toml  (+2 more)
_partials/: alumni.md  certif.md  chrome.md  conda_uninstall.md  dbeaver.md  direnv.md  docker.md  dotfiles.md  dotfiles_code.md  dotfiles_installer.md  dotfiles_merge_upstream.md  dotfiles_new_laptop.md  dotfiles_new_laptop_heading.md  dotfiles_new_student.md  dotfiles_same_laptop.md  dotfiles_stt.md  end.md  gcp_cli_setup.md  gcp_setup.md  gcp_setup_end.md  gcp_setup_linux.md  gcp_setup_mid.md  gcp_setup_wsl.md  github_rsa.md  homebrew.md  intro.md  kata.md  keep_current.md  kitt.md  m1_pip.md  m1_virtualenv.md  pip.md  (+44 more)
specs/base/: constraints.yml  package_platforms.md  package_release.md  packages.yml  process.md  pyproject.toml  requirements_mac_silicon_arm.txt  requirements_mac_silicon_i386.txt  requirements_mac_silicon_i386_raw.txt  requirements_macos_intel_x86.txt  requirements_macos_intel_x86_raw.txt  setup_tests.md
(+136 files in other folders)
