[tool.poetry]
name = "data-setup-dependencies"
version = "1.0.0"
description = "Le Wagon Data Setup - Q4 2022"
authors = ["Sébastien Saunier <seb@lewagon.org>"]

[tool.poetry.dependencies]
python = "3.10.6"
tensorflow = [
  { version = "^2.10", platform = "darwin" }
]
tensorflow-macos = [
  { version = "^2.10", platform = "linux" }
]
scikit-learn = "^1.1.0"
pandas = "^1.5.0"
yapf = "^0.32.0"
seaborn = "^0.12.0"
plotly = "^5.10.0"
xgboost = "^1.6.2"
jupyterlab = "^3.4.7"
jupyter-resource-usage = "^0.6.2"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter-nbextensions-configurator = "^0.5.0"
nbconvert = "^7.0.0"
statsmodels = "^0.13.2"
XlsxWriter = "^3.0.3"
tqdm = "^4.64.1"
folium = "^0.12.1.post1"
pandas-gbq = "^0.17.8"
ipywidgets = "^8.0.2"
scipy = "^1.9.1"
google-trans-new = "^1.1.9"
scikit-image = "^0.19.3"
pmdarima = "^2.0.1"
ipympl = "^0.9.2"
nltk = "^3.7"
Pillow = "^9.2.0"
TPOT = "^0.11.7"
deap = "^1.3.3"
update-checker = "^0.18.0"
stopit = "^1.1.2"
joblib = "^1.2.0"
dask = "^2022.9.1"
imblearn = "^0.0"
tensorflow-datasets = "^4.6.0"
gensim = "^4.2.0"
kaggle = "^1.5.12"
pandas-profiling = "<=3.1.0"
pytest = "^7.1.3"
nbresult = "^0.0.8"
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
ipdb = "^0.13.9"
beautifulsoup4 = "^4.11.1"
PyYAML = "^6.0"
lxml = "^4.9.1"
requests = "^2.28.1"
memoized-property = "^1.0.3"
notebook = "^6.4.12"
python-dotenv = "^0.21.0"
